[build-system]
requires = ["poetry==1.1.12"]
build-backend = "poetry.masonry.api"

[tool.black]
safe = true
skip-string-normalization = true

[tool.poetry]
name = "deck-chores"
version = "1.2.3"
description = "Job scheduler for Docker containers, configured via container labels."
readme = "README.rst"
documentation = "https://deck-chores.readthedocs.org/"
repository = "https://github.com/funkyfuture/deck-chores"
license = "ISC license"
keywords = ["docker", "cron", "scheduler", "jobs", "labels", "metadata"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython"
]
authors = ["Frank Sachsenheim <funkyfuture@riseup.net>"]

[tool.poetry.scripts]
deck-chores = "deck_chores.main:main"

[tool.poetry.dependencies]
# the Dockerfile-dev has these values too
# .readthedocs.yml must be in parity with the Python version
# it's also all over the Github workflows
python = "^3.9"
apscheduler = "^3.6"
cerberus = "^1.3.4"
docker = {version = "^5.0", extras = ["ssh", "tls"]}
fasteners = "^0.14"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true }
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
Sphinx = "^4"
sphinx_rtd_theme = "*"
types-python-dateutil = "^0.1.4"
types-pytz = "^2021.1.0"
types-setuptools = "^57.0.0"
