[build-system]
requires = ["poetry==1.8.3"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "deck-chores"
version = "1.4.11"
description = "Job scheduler for Docker containers, configured via container labels."
readme = "README.rst"
documentation = "https://deck-chores.readthedocs.org/"
repository = "https://github.com/funkyfuture/deck-chores"
license = "ISC license"
keywords = ["docker", "cron", "scheduler", "jobs", "labels", "metadata"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython"
]
authors = ["Frank Sachsenheim <funkyfuture@riseup.net>"]

[tool.poetry.scripts]
deck-chores = "deck_chores.main:main"

[tool.poetry.dependencies]
# the Dockerfile{-dev} have these values too
# .readthedocs.yml must be in parity with the Python version
# it's also all over the Github workflows
# TODO update to 3.12 when available, tracked in #150
python = "^3.12"
apscheduler = "^3.6"
cerberus = "^1.3.4"
docker = {version = "^7", extras = ["ssh"]}
fasteners = "^0.14"
python-dateutil = "^2.8.1"
pytz = "*"

[tool.poetry.group.dev.dependencies]
furo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
types-python-dateutil = "^0.1.4"
types-pytz = "^2021.1.0"
types-setuptools = "*"
